# CG2271-Lab-Project-ESP32-MCXC44X

./: README.md
ESP32S2_test/: .gitignore  CG2271 Project TDD.md  CMakeLists.txt  README.md  WIKI.md  sdkconfig_editted.txt
ESP32S2_test/datasheets/: pinouts.md
ESP32S2_test/main/: CMakeLists.txt  ESP32S2_setup_test.c  Etch-a-Sketch AI Pictionary.html  HTTPS_API_setup_test.c  Notes.txt  app_api.c  app_api.h  framebuffer_test.c  image_framebuffer.c  image_framebuffer.h  main.c  prompt_test.c
OldSelfFiles/: CMakeLists.txt  Etch-a-Sketch AI Pictionary.html
OldSelfFiles/Etch-a-Sketch AI Pictionary_files/: css2
OldSelfFiles/main/: .gitignore  Notes.txt  main.c  uart_queue_test.c  websocket_test.c  wifi_setup_test.c
